--- a/src/main/java/org/example/AddDistrictForm.form
+++ b/src/main/java/org/example/AddDistrictForm.form
@@ -248,7 +248,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="e01f6" class="javax.swing.JButton" binding="updateDataButton">
+      <component id="e01f6" class="javax.swing.JButton" binding="addDataButton">
         <constraints>
           <grid row="15" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
