--- a/src/main/java/org/example/MenuLoggedForm.form
+++ b/src/main/java/org/example/MenuLoggedForm.form
@@ -78,7 +78,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Wyswietl budynki dla dzielnicy"/>
+          <text value="Wyswietl budynek dla wskazanego mieszkańca"/>
         </properties>
       </component>
       <vspacer id="e5c35">
